fixed scroll lock issue when cropped image preview overflows screen

--- a/style/dimensions.css
+++ b/style/dimensions.css
@@ -3,14 +3,14 @@ body {
   font-family: proxima-nova-soft, sans-serif;
 }
 
+body.stop-scrolling { overflow: auto; }
+
 h1, h2, h3, h4, h5, h6 { 
   font-family: proxima-nova, sans-serif;
   font-weight: bold;
 }
 
-button {
-  background-color: #FFF;
-}
+button { background-color: #FFF; }
 
 .container {
   position: relative;
@@ -108,7 +108,8 @@ button {
 
 .sweet-alert { 
   width: 85%;
-  margin-top: -250px;
+  margin-top: -250px !important;
+  position: absolute;
 }
 .sweet-alert button { padding: 0 30px; }
 .sweet-alert button:focus { color: #FFF; }
